Support 64-char HEX machine IDs and improve error handling
Adds support for machine IDs in both UUID and 64-character HEX formats across backend and frontend validation, updates related UI text, and refines normalization logic. Improves error handling and test coverage for error mapping strategies, and enhances account import flexibility for various JSON formats. Also adds a test setup file to standardize test environment configuration.

--- a/static/index.html
+++ b/static/index.html
@@ -106,9 +106,9 @@
                     账号: <span id="machineIdEmail" style="color: var(--text-primary);"></span>
                 </p>
                 <div class="machine-id-input-group">
-                    <label class="machine-id-label">机器码 (UUID格式)</label>
+                    <label class="machine-id-label">机器码 (UUID或64位HEX)</label>
                     <input type="text" id="machineIdInput" class="machine-id-input"
-                           placeholder="xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx">
+                           placeholder="UUID 或 64 位 HEX">
                     <div class="machine-id-actions">
                         <button class="btn btn-secondary" onclick="dashboard.generateRandomMachineId()">
                             随机生成
