Add batch random machine ID generation feature
Introduces a 'Batch Random Machine ID' button to the UI and implements both single and batch random machine ID generation in dashboard.js. Adds proper escaping for JS strings in event handlers, updates the machine ID cell to support random generation, and caches the latest token list for batch operations.

--- a/static/index.html
+++ b/static/index.html
@@ -47,6 +47,10 @@
                 <span>📥</span> 导入账号
             </button>
             <input type="file" id="importFile" accept=".json" style="display: none;">
+
+            <button class="btn btn-secondary" id="batchMachineIdBtn">
+                <span>🎲</span> 批量随机机器码
+            </button>
             
             <button class="btn btn-secondary refresh-btn">
                 <span>🔄</span> 手动刷新
