--- a/static/index.html
+++ b/static/index.html
@@ -66,6 +66,14 @@
                     <span class="status-value text-sm" id="lastUpdate">-</span>
                 </div>
             </div>
+            <div class="status-card">
+                <div class="status-icon"><i class="ri-error-warning-line"></i></div>
+                <div class="status-info">
+                    <span class="status-label">已过期</span>
+                    <span class="status-value" id="expiredTokens">-</span>
+                </div>
+                <div class="status-glow" style="background: radial-gradient(circle, rgba(239,68,68,0.2) 0%, transparent 70%)"></div>
+            </div>
         </div>
         
         <!-- Dashboard Grid -->
@@ -174,5 +182,6 @@
     </div>
 
     <script src="/static/js/dashboard.js"></script>
+    <div class="toast-container" id="toastContainer"></div>
 </body>
 </html>
