Add temporary disable for OAuth tokens
Introduce a temporary disable feature for OAuth tokens: add Disabled flag to StoredToken and AuthConfig, implement OAuthTokenStore.SetTokenDisabled, and add /api/oauth/tokens/batch-disable handler. Frontend: UI button, text/icon updates, batch disable/enable flow and CSS styles. TokenManager and SessionTokenPool now respect disabled tokens by skipping assignment (tokens are still refreshed in background), plus TokenManager.isTokenDisabled and SessionTokenPool.tokenIsDisabled helpers. ReloadTokens now merges env+oauth configs via GetConfigs and stops the old TokenManager before replacing it.

--- a/static/index.html
+++ b/static/index.html
@@ -90,6 +90,9 @@
                         <button class="btn btn-secondary btn-xs" id="batchMachineIdBtn">
                             <i class="ri-dice-line"></i> 随机机器码
                         </button>
+                        <button class="btn btn-warning btn-xs" id="batchDisableBtn">
+                            <i class="ri-forbid-line"></i> <span id="batchDisableBtnText">禁用</span>
+                        </button>
                         <button class="btn btn-danger btn-xs btn-batch-delete" id="batchDeleteBtn">
                             <i class="ri-delete-bin-line"></i> 删除
                         </button>
